test/expected/glob_malformed_bracket.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "[abc"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "[abc"
]
shit: 2:6: error: Malformed glob pattern, unterminated '['.
     2 |  echo [abc
       |       ^~~~ here.
[Code 1]
